[package]
name = "program_associated_account_poc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-program = "1.6.6"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }

[dev-dependencies]
bincode = "1.3.1"
indicatif = "0.15.0"
solana-sdk = "1.6.6"
solana-client = "1.6.6"
solana-runtime = "1.6.6"
solana-faucet = "1.6.6"
serial_test = "0.5.1"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_associated_account_poc"